--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.12",
+    "@angular/animations": "^11.2.14",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
@@ -21,7 +21,9 @@
     "@angular/router": "~11.2.12",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.18",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
